--- a/microservices/package.json
+++ b/microservices/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "zeromq": "4.2.1"
+  }
 }
